--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Project</string>
-    <string name="hello_world">Hello Minh Thy helloopop </string>
+    <string name="hello_world">Hello Minh Thy Change here </string>
     <string name="action_settings">Settings</string>
 
 </resources>
