changed string setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Project</string>
     <string name="hello_world">Hello Minh Thy Change here </string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Settings again</string>
 
 </resources>
