--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Project</string>
+    <string name="app_name">LocateMiProject</string>
     <string name="hello_world">Hello Minh Thy Change here </string>
+    <string name="Default_msg">This is the front page!</string>
     <string name="action_settings">Settings again</string>
+    <string name="title_activity_front">FrontActivity</string>
 
 </resources>
