--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <item>Location</item>
     <item>Monitor</item>
     <item>Contacts</item>
-    <item>Preference</item>
+    <item>Map</item>
     </string-array>
 
 </resources>
