--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">LocateMiProject</string>
+    <string name="app_name">LocateMi</string>
     <string name="hello_world">Hello there</string>
     <string name="Default_msg">This is the front page!</string>
     <string name="action_settings">Settings again</string>
