--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
     <string name="message_setting">Message Setting</string>
     <string name="alert_setting">Alert Setting</string>
     <string name="contact_setting">Contact Setting</string>
-
-
+    <!--declare instruction string here-->
+    <string name="contact_setting_instruction">Contact Setting allows you to restrict who can receive messages about your current location.</string>
+    <string name="add_manually">Add manually</string>
+    <string name="from_contact">From contacts</string>
 
 </resources>
