--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="add_manually">Add manually</string>
     <string name="from_contact">From contacts</string>
     <string name="add_manually_instruction">Enter a name,number and email to add to the list.</string>
-
+    <string name="contact_title">Contact list</string>
+    <string name="no_contact">No contacts found.</string>
 </resources>
