Change the button message history

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="no_contact">No contacts found.</string>
     <string name="backToMain">Back</string>
     <string name="add_selected">Add Selected</string>
+    <string name="alarm_sound">Alarm Sound</string>
+    <string name="danger">Danger</string>
+
 </resources>
