--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="add_manually_instruction">Enter a name,number and email to add to the list.</string>
     <string name="contact_title">Contact list</string>
     <string name="no_contact">No contacts found.</string>
-    <string name="backToMain">Back</string>
+    <string name="backToMain">Back To Contact Setting</string>
     <string name="add_selected">Add Selected</string>
     <string name="alarm_sound">Alarm Sound</string>
     <string name="danger">Danger</string>
