add listview for address result

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="longitude_txt">Current Longitude : </string>
     <string name="getMyLocation">Get Current Location</string>
     <string name="loading">Loading...</string>
+    <string name="result_title">Estimated Address Results</string>
 
 </resources>
