finish submitContact function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="from_contact">From contacts</string>
     <string name="add_manually_instruction">Enter a name,number and email to add to the list.</string>
     <string name="contact_title">Contact list</string>
-    <string name="no_contact">No contacts found.</string>
+    <string name="no_contact">Only contacts listed below can receive messages about your location.</string>
     <string name="backToMain">Back To Contact Setting</string>
     <string name="add_selected">Add Selected</string>
     <string name="alarm_sound">Alarm Sound</string>
