--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,10 @@
     <string name="check_location">My location</string>
     <string name="create_account">Create account</string>
     <string name="message_history">Message History</string>
-    <string name="message_setting">Message Setting</string>
+    <string name="message_setting">Global SOS</string>
     <string name="alert_setting">Alert Setting</string>
     <string name="contact_setting">Contact Setting</string>
+
 
     <!--declare instruction string here-->
     <string name="contact_setting_instruction">Contact Setting allows you to restrict who can receive SMS/Email about your current location.</string>
@@ -26,7 +27,8 @@
     <string name="backToMain">Back To Contact Setting</string>
     <string name="add_selected">Add Selected</string>
     <string name="alarm_sound">Alarm Sound</string>
-    <string name="danger">Danger</string>
+    <string name="danger">SOS</string>
+    <string name="help">Help?</string>
     <string name="location_title">Location Information</string>
     <string name="latitude_txt">Current Latitude : </string>
     <string name="longitude_txt">Current Longitude : </string>
@@ -38,7 +40,7 @@
     <string name="listTitle1">Message details</string>
     <string name="editTitle">Edit Contact</string>
     <string name="delete">Delete</string>
-
+    <string name="emergency_contact">Emergency contacts</string>
     <!--Message History xml string value-->
     <string name="msgHistory">Message History</string>
     <string name="msgID">ID</string>
