--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,15 @@
     <string name="title_activity_front">FrontActivity</string>
     <string name="title_activity_location">LocationActivity</string>
 
-    <!--declare menu string here-->
+    <!-- declare menu string here -->
     <string name="check_location">My location</string>
     <string name="create_account">Create account</string>
-    <string name="message_history">Message History</string>
+    <string name="alert_history">Alert History</string>
     <string name="message_setting">Global SOS</string>
     <string name="alert_setting">Alert Setting</string>
     <string name="contact_setting">Contact Setting</string>
 
-
-    <!--declare instruction string here-->
+    <!-- declare instruction string here -->
     <string name="contact_setting_instruction">Contact Setting allows you to restrict who can receive SMS/Email about your current location.</string>
     <string name="add_manually">Add manually</string>
     <string name="from_contact">From contacts</string>
@@ -41,31 +40,33 @@
     <string name="editTitle">Edit Contact</string>
     <string name="delete">Delete</string>
     <string name="emergency_contact">Emergency contacts</string>
-    <!-- Help notes-->
+    <!-- Help notes -->
     <string name="thankyou">Thank you for downloading LocateMi!</string>
     <string name="contact_instruct">Contact Setting: For you to choose all contacts in your phone to send alert message when you are in emergency.</string>
     <string name="location_instruct">My location: For you to check your current location which will be sent to your contacts.</string>
     <string name="alarm_instruct">Alarm Sound: For you to spread the sound and flash out in case you need attention from people staying around you</string>
     <string name="history_instruct">Message History: For you to check which messages had been sent out.</string>
-   <string name="country_instruct">Global SOS: For you to check SOS contacts of many countries, in case you need help in a foreign country.</string>
-   <string name="setting_instruct">Alert Setting: For you to customize your options about LocateMi.</string>
+    <string name="country_instruct">Global SOS: For you to check SOS contacts of many countries, in case you need help in a foreign country.</string>
+    <string name="setting_instruct">Alert Setting: For you to customize your options about LocateMi.</string>
     <string name="SOS_instruct">SOS: For you to send alert messages to all contacts which you saved in case you need all their helps.</string>
-    <!--Message History xml string value-->
+    <!-- Message History xml string value -->
     <string name="msgHistory">Message History</string>
     <string name="msgID">ID</string>
     <string name="receiver">Receiver</string>
     <string name="message">Status</string>
     <string name="time">Timestamp</string>
 
-    <!--interval spinner-->
-     <string-array name="interval_array">
-            <item>1</item>
-            <item>15</item>
-            <item>30</item>
-            <item>60</item>
-            <item>90</item>
-            <item>120</item>
-     </string-array>
-    <string name="alertTitle">Select the alert interval timing</string>
+    <!-- interval spinner -->
+    <string-array name="interval_array">
+        <item>1</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>90</item>
+        <item>120</item>
+    </string-array>
 
-    </resources>
+    <string name="alertTitle">Select the alert interval timing</string>
+    <string name="title_activity_sos">SOSActivity</string>
+
+</resources>
