--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="no_contact">Only contacts listed below can receive messages about your location.</string>
     <string name="backToMain">Back To Contact Setting</string>
     <string name="add_selected">Add Selected</string>
-    <string name="alarm_sound">Alarm Sound</string>
+    <string name="alarm_sound">Alert Sound</string>
     <string name="danger">SOS</string>
     <string name="help">Help?</string>
     <string name="location_title">Location Information</string>
